# smart-q-a-application

./: README.md  main.py  pyproject.toml
smart_qa/: client.py  custom_exceptions.py
tests/: conftest.py  test_client.py
